sync test and uwsgi (ini) setup

--- a/uwsgi/shomeserver.ini
+++ b/uwsgi/shomeserver.ini
@@ -3,9 +3,7 @@ plugins = python
 http = 0.0.0.0:50870
 gid = 1000
 uid = 1000
-single-interpreter = true
 enable-threads = true
+processes = 10
 master = true
 module = shomeserver.server:server
-need-app = true
-lazy-apps = true
