switch to threads

--- a/uwsgi/shomeserver.ini
+++ b/uwsgi/shomeserver.ini
@@ -4,6 +4,6 @@ http = 0.0.0.0:50870
 gid = 1000
 uid = 1000
 enable-threads = true
-processes = 10
+threads = 10
 master = true
 module = shomeserver.server:server
