enable thread workers

--- a/client/pirgb/uwsgi/pirgb.ini
+++ b/client/pirgb/uwsgi/pirgb.ini
@@ -3,9 +3,7 @@ plugins = python
 http = 0.0.0.0:50871
 gid = 1000
 uid = 1000
-single-interpreter = true
 enable-threads = true
+threads = 10
 master = true
 module = pirgb.server:server
-need-app = true
-lazy-apps = true
